--- a/src/main/resources/templates/auth/signup.html
+++ b/src/main/resources/templates/auth/signup.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Test Signup Page</title>
-</head>
+<html
+        xmlns="http://www.w3.org/1999/xhtml"
+        xmlns:th="http://www.thymeleaf.org"
+        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+        layout:decorate="~{layouts/layoutContents.html}">
 <body>
+<th:block layout:fragment="script">
+    <script th:src="@{../resources/dist/sign.bundle.js}"></script>
+</th:block>
+<th:block layout:fragment="content">
 <div class="">
-    <form class="" action="/auth/signup" method="post">
+    <form id="signup_form" class="" action="/auth/signup" method="post">
         <div class="form-group">
             <label for="userId">이메일</label>
             <div class="col-sm-10">
@@ -52,12 +56,12 @@
         </div>
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-sm btn-edit-submit">등록</button>
+                <button type="button" id="submit" class="btn btn-sm btn-edit-submit">등록</button>
                 <button type="reset" class="btn btn-sm">초기화</button>
             </div>
         </div>
     </form>
-
 </div>
+</th:block>
 </body>
 </html>
