--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -1,14 +1,14 @@
 <th:block th:fragment="headFragment">
-<head>
+
     <meta charset="UTF-8">
     <!-- -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/common.css">
+
+    <link rel="stylesheet" href="../../css/common.css">
     <!-- -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <!-- -->
-    <script src="../resources/dist/main.bundle.js"></script>
+    <script src="../../resources/dist/main.bundle.js"></script>
 
-</head>
 </th:block>
