--- a/src/main/resources/templates/layouts/layoutContents.html
+++ b/src/main/resources/templates/layouts/layoutContents.html
@@ -3,7 +3,10 @@
        xmlns:th="http://www.thymeleaf.org"
        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
+
 <th:block th:replace="fragments/head :: headFragment"></th:block>
+<th:block layout:fragment="script"></th:block>
+
 
 <body>
 <th:block th:replace="fragments/header :: .header"></th:block>
