--- a/src/main/resources/templates/board/detail.html
+++ b/src/main/resources/templates/board/detail.html
@@ -13,7 +13,7 @@
                     <div class="article_container" th:with="vo=${contents[0]}">
                         <div class="title_area">
                             <div>No.[[${vo.articleNo}]]</div>
-                            <div>제목[[${vo.title}]]</div>
+                            <div id="title">제목[[${vo.title}]]</div>
                             <div>[[${vo.insDate}]]</div>
                         </div>
                         <div class="sub_area">
@@ -24,7 +24,7 @@
                             </div>
                         </div>
                         <div class="article_area">
-                            <div>내용[[${vo.contents}]]</div>
+                            <div id="contents">내용[[${vo.contents}]]</div>
                         </div>
                         <div class="bottom_area">
                             <div>shop_no[[${vo.shopNo}]]</div>
@@ -56,7 +56,7 @@
                                             th:data-article-no="${vo.articleNo}"
                                             class="like_btn"></button>
 
-                                    <th:block th:if="${vo.userNo}==${me}">
+                                    <th:block th:if="${vo.userNo}==${userInfo.userNo}">
                                         <button class="article_edit_btn">edit</button>
                                     </th:block>
                                 </th:block>
