--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -32,24 +32,33 @@
                             </div>
                     </div>
                 </div>
-                <div class="form-group">
-                    <label for="title"></label>
-                    <div class="input_wrapper">
-                        <input type="text" class="required" id="title" name="title" placeholder="title">
+                <div class="article_container">
+                    <div class="title_area">
+                        <div class="input_wrapper">
+                            <label for="title"></label>
+                            <input type="text" class="required" id="title" name="title" placeholder="title">
+                        </div>
                     </div>
-                </div>
-                <div class="form-group article_area">
-                    <label for="contents"></label>
-                    <div class="input_wrapper">
-                        <textarea class="required contents_textarea" id="contents" name="contents" placeholder="contents"></textarea>
+                    <div class="sub_area">
+                        <div></div>
+                        <div>
+                            <div></div>
+                            <div></div>
+                        </div>
                     </div>
+                    <div class="article_area">
+                        <label for="contents"></label>
+                        <div class="input_wrapper">
+                            <textarea class="required contents_textarea" id="contents" name="contents" placeholder="contents"></textarea>
+                        </div>
+                    </div>
+                    <div class="thumb_container" style="width:100px"></div>
                 </div>
-                <div class="form-group">
+                <div class="">
                     <label for="files"></label>
                     <div class="">
                         <input type="file" class="" id="files" name="files" multiple>
                     </div>
-                    <div class="thumb_container" style="width:100px"></div>
                 </div>
                 <div>
                     <button id="submit_btn" type="submit" disabled="disabled">등록</button>
