--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -6,9 +6,11 @@
 
     <link rel="stylesheet" href="../../css/common.css">
     <!-- -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- -->
-    <script defer src="../../resources/dist/main.bundle.js"></script>
+    <script defer src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
+</th:block>
+<th:block th:fragment="scriptFragment">
+    <script defer src="../../resources/dist/main.bundle.js"></script>
 </th:block>
