CustomUserService에서 AuthUserInfo통합 관련 개선?

--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -1,147 +1,24 @@
-body, html {
-    height: 100%;
-}
-
-body {
-    padding-top: 70px;
-}
-header {
-    z-index:999;
-    position: fixed;
-    top : 0;
-    transition: top 0.3s ease-in-out;
-
-    opacity: 0.9;
-    height: 70px;
-    width: 100%;
-    font-size: 18px;
-}
-.logo{
-    width: 150px;
-}
-.nav-up {
-    top: -70px;
-}
-
-
-.nav-down {
-    display: inline-flex;
-}
-
-nav {
-    background-color: #f8f8f8;
-    width: inherit;
-    box-sizing: border-box;
-    box-shadow: 0 1px 2px hsl(0deg 0% 0% / 5%);
-    padding: 0% 5% 0% 5%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.serch {
-    box-shadow: none;
-    text-indent: 20px;
-    border: none;
-    width: 200px;
-    height: 70px;
-}
-
-.menu>li {
-    display: inline-block;
-    background-color: transparent;
-    list-style: none;
-    padding: 5px 20px 5px 5px;
-}
-.menu>li>a {
-    color: black;
-    text-decoration: none;
-    font-weight: 700;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    -webkit-font-smoothing: antialiased;
-    -webkit-text-size-adjust: 100%;
-}
-.menu>li>a:hover{
-    font-size: 20px;
-}
-
-.row>div:nth-child(1){
-    overflow: auto;
-    height: inherit;
-}
+body, html {height: 100%;}
+body {padding-top: 70px;}
+header {z-index:999;position: fixed;top : 0;transition: top 0.3s ease-in-out;opacity: 0.9;height: 70px;width: 100%;font-size: 18px;}
+.logo{width: 150px;}  .nav-up {top: -70px;}  .nav-down {display: inline-flex;}
+nav {background-color: #f8f8f8;width: inherit;box-sizing: border-box;box-shadow: 0 1px 2px hsl(0deg 0% 0% / 5%);padding: 0% 5% 0% 5%;display: flex;justify-content: space-between;align-items: center;}
+.serch {box-shadow: none;text-indent: 20px;border: none;width: 200px;height: 70px;}
+.menu>li {display: inline-block;background-color: transparent;list-style: none;padding: 5px 20px 5px 5px;}
+.menu>li>a {color: black;text-decoration: none;font-weight: 700;-webkit-tap-highlight-color: rgba(0, 0, 0, 0);-webkit-font-smoothing: antialiased;-webkit-text-size-adjust: 100%;}
+.menu>li>a:hover{font-size: 20px;}
+.row>div:nth-child(1){overflow: auto;height: inherit;}
 .element::-webkit-scrollbar { width: 0 !important }
-
-.container {
-    height: 85%;
-    width: 100%;
-    padding: 10px 50px 10px 50px;
-
-}
-.footer {
-    background-color: gray;
-    height: 5%
-}
-.boardContent {
-    position:fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    background-color: white;
-    z-index: 99;
-    box-shadow: 0 1rem 1rem hsl(0 0% 0% / 10%);
-
-}
-.shopCard {
-    overflow: hidden;
-    position: relative;
-    display: flex;
-    /*align-items: center;*/
-    cursor: pointer;
-
-    width: 90%;
-    height: 100px;
-    box-shadow: 3px 3px 8px 0px hsl(0deg 0% 83%);
-    background: hsl(0deg 0% 98%);
-    color: hsl(200 50% 20%);
-    line-height: 1.5;
-    /*place-items: center;*/
-    /*text-align: center;*/
-    margin: 20px 0px 20px 0;
-    /*border-radius: 2ch;*/
-    border: 0px solid hsl(0 0% 85%);
-}
-.image-box{
-    background-color: gray;
-    width: 100px;
-    height: 100px;
-}
-.title-box{
-    flex-grow: 1;
-    margin: 10px 10px 10px 10px;
-    display: block;
-}
-.title-box>div:nth-child(1){
-    height: 20px;
-    display: flex;
-    justify-content: space-between;
-}
-.title-box>div:nth-child(2){
-    height: 40px;
-    overflow: hidden;
-}
-.title-box>div:nth-child(3){
-    height: 20px;
-    position: absolute;
-    bottom: 10px;
-    font-size: smaller;
-}
-.main_thumb {
-    height: 200px;
-    width: 200px;
-}
-
-
-
+.container {height: 85%;width: 100%;padding: 10px 50px 10px 50px;}
+.footer {background-color: gray;height: 5%}
+.boardContent {position:fixed;top: 50%;left: 50%;transform: translate(-50%,-50%);background-color: white;z-index: 99;box-shadow: 0 1rem 1rem hsl(0 0% 0% / 10%);}
+.shopCard {overflow: hidden;position: relative;display: flex; /*align-items: center;*/cursor: pointer;width: 90%;height: 100px;box-shadow: 3px 3px 8px 0px hsl(0deg 0% 83%);background: hsl(0deg 0% 98%);color: hsl(200 50% 20%);line-height: 1.5; /*place-items: center;*/ /*text-align: center;*/margin: 20px 0px 20px 0; /*border-radius: 2ch;*/border: 0px solid hsl(0 0% 85%);}
+.image-box{background-color: gray;width: 100px;height: 100px;}
+.title-box{flex-grow: 1;margin: 10px 10px 10px 10px;display: block;}
+.title-box>div:nth-child(1){height: 20px;display: flex;justify-content: space-between;}
+.title-box>div:nth-child(2){height: 40px;overflow: hidden;}
+.title-box>div:nth-child(3){height: 20px;position: absolute;bottom: 10px;font-size: smaller;}
+.main_thumb {height: 200px;width: 200px;}
 
 .hidden {display: none;}
 .unselected > .comment_textarea_wrapper {display: none;}.selected > .comment_textarea_wrapper {display: flex;}
@@ -176,9 +53,11 @@ input:focus{outline:none; background-color: aliceblue;}
 .contents_textarea{min-width: inherit; min-height: inherit; border: none; resize: none;}
 .contents_textarea:focus{outline: none;}
 
+/*list page*/
 .load-bar{height: 50px; background-color: skyblue; text-align: center;}
 .load-bar:hover{opacity: 80%}
 .list-wrapper{margin-bottom: 50px}
 .pagination-box{height:50px; width: 100%; display: flex; position: fixed; bottom: 1px; background-color: white}
 .pagination-box>div{width: 50px; text-align: center; align-self: center}
 .current-page{font-weight: bold}
+.map-wrapper{border-radius: 20px; overflow: hidden; margin-top: 20px;}
