--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -16,7 +16,7 @@
                         <input type="text" class="" id="search" placeholder="이름으로 찾기"/>
                     </div>
                     <br>
-            <form class="form-horizontal" enctype="multipart/form-data" action="/board/ins" method="post">
+            <form class="form-horizontal" enctype="multipart/form-data" action="/board/article" method="post">
                 <div class="form-group">
                     <label class="" for="shopName">가게</label>
                     <div class="">
@@ -36,7 +36,11 @@
                     <div class="title_area">
                         <div class="input_wrapper">
                             <label for="title"></label>
-                            <input type="text" class="required" id="title" name="title" placeholder="title">
+                            <input type="text"
+                                   class="required"
+                                   id="title"
+                                   name="title"
+                                   placeholder="title">
                         </div>
                     </div>
                     <div class="sub_area">
@@ -49,7 +53,10 @@
                     <div class="article_area">
                         <label for="contents"></label>
                         <div class="input_wrapper">
-                            <textarea class="required contents_textarea" id="contents" name="contents" placeholder="contents"></textarea>
+                            <textarea class="required contents_textarea"
+                                      id="contents"
+                                      name="contents"
+                                      placeholder="contents"></textarea>
                         </div>
                     </div>
                     <div class="thumb_container" style="width:100px"></div>
