--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -39,16 +39,17 @@
             </div>
 
             <div class="col-md-6 col-sm-6">
+                <div class="map-wrapper">
+                    <div id="map" style="width:100%;height:70vh;">
 
-                <div id="map" style="width:100%;height:500px;">
+                    </div>
+                    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d5095f17741658a2619e264f83febd1f&libraries=services,clusterer,drawing"></script>
+                    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d5095f17741658a2619e264f83febd1f"></script>
+                    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+                    <script th:inline="javascript">
 
+                    </script>
                 </div>
-                <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d5095f17741658a2619e264f83febd1f&libraries=services,clusterer,drawing"></script>
-                <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d5095f17741658a2619e264f83febd1f"></script>
-                <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-                <script th:inline="javascript">
-
-                </script>
             </div>
         </div>
     </div>
