--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -19,7 +19,7 @@
             <th:block>[[${userInfo.userNo}]]</th:block>
             <th:block>[[${userInfo.username}]]</th:block>
                 <li><a class="addShop_btn">샵추가</a></li>
-                <li><a href="/auth/logout" class="logout_btn">로그아웃</a></li>
+                <li><a href="/auth2/logout" class="logout_btn">로그아웃</a></li>
             </th:block>
             <th:block th:unless="${isLogin}">
                 <li><a href="/oauth2/authorization/google">구글로그인</a></li>
